--- a/src/Beacon.Web/Components/Layout/MainLayout.razor
+++ b/src/Beacon.Web/Components/Layout/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-<FluentDesignTheme OfficeColor="OfficeColor.Excel" />
+<FluentDesignTheme OfficeColor="OfficeColor.SharePoint" />
 <FluentLayout>
     <FluentHeader >
         Beacon
@@ -14,10 +14,10 @@
     </FluentStack>
     <FluentFooter>
         <div class="link1">
-            <a href="https://www.fluentui-blazor.net" target="_blank">Documentation and demos</a>
+            <a href="https://www.fluentui-blazor.net" target="_blank">Documentation</a>
         </div>
         <div class="link2">
-            <a href="https://learn.microsoft.com/en-us/aspnet/core/blazor" target="_blank">About Blazor</a>
+            <a href="https://learn.microsoft.com/en-us/aspnet/core/blazor" target="_blank">Learn Blazor</a>
         </div>
     </FluentFooter>
 </FluentLayout>
