--- a/src/Beacon.Web/Components/Layout/MainLayout.razor
+++ b/src/Beacon.Web/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+
 <FluentDesignTheme OfficeColor="OfficeColor.SharePoint" />
 <FluentLayout>
     <FluentHeader >
@@ -28,7 +29,7 @@
     <a class="dismiss">🗙</a>
 </div>
 
-<FluentToastProvider />
-<FluentDialogProvider />
-<FluentTooltipProvider />
-<FluentMessageBarProvider />
+<FluentToastProvider @rendermode="InteractiveServer" />
+<FluentDialogProvider @rendermode="InteractiveServer" />
+<FluentTooltipProvider @rendermode="InteractiveServer" />
+<FluentMessageBarProvider @rendermode="InteractiveServer" />
