--- a/src/Beacon.Web/Components/_Imports.razor
+++ b/src/Beacon.Web/Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Microsoft.JSInterop
+@using Apollo
 @using Beacon.Web
 @using Beacon.Web.Components
 @using Beacon.Contracts
