add ux prototype for component details

--- a/src/Beacon.Web/Components/Pages/Components/Index.razor
+++ b/src/Beacon.Web/Components/Pages/Components/Index.razor
@@ -44,7 +44,7 @@
                     @{
                         var id = Guid.NewGuid().ToString();
                     }
-                    <a href="javascript:void(0)" id="@id">@context.Name</a>
+                    <a href="@($"/components/{context.Guid}")" id="@id">@context.Name</a>
                     <FluentTooltip Anchor="@id" Position="TooltipPosition.Right">
                         @context.Description
                     </FluentTooltip>
