--- a/src/Beacon.Web/Components/Pages/Components/Overview.razor
+++ b/src/Beacon.Web/Components/Pages/Components/Overview.razor
@@ -16,42 +16,61 @@ else
 {
     <PageTitle>Component - @Component.Name</PageTitle>
 
-    <FluentLabel Style="margin-top: 20px" Typo="Typography.H3">
-        <FluentIcon Value="@(new Icons.Regular.Size24.TetrisApp())" Color="@Color.Neutral"/> @Component.Name
-    </FluentLabel>
+    <FluentStack VerticalAlignment="VerticalAlignment.Bottom">
+        <FluentLabel Style="margin-top: 20px" Typo="Typography.H3">
+            <FluentIcon Value="@(new Icons.Regular.Size24.TetrisApp())" Color="@Color.Neutral" slot="start"/>
+            @Component.Name
+        </FluentLabel>
+        <HealthBadge ComponentId="ComponentId"/>
+    </FluentStack>
 
     <FluentStack Style="margin-top: 20px">
         <FluentCard>
-            <FluentStack Style="margin-bottom: 10px" VerticalAlignment="VerticalAlignment.Center">
-                <FluentLabel Typo="Typography.Header">Overview</FluentLabel>
-                <HealthBadge ComponentId="ComponentId"/>
-            </FluentStack>
-            <FluentStack Style="margin-bottom: 10px" VerticalAlignment="VerticalAlignment.Center">
-                <FluentLabel Typo="Typography.H6">Type</FluentLabel>
-                <div>@Component.Type</div>
-            </FluentStack>
-            <FluentStack Style="margin-bottom: 10px" VerticalAlignment="VerticalAlignment.Center">
-                <FluentLabel Typo="Typography.H6">Environments</FluentLabel>
-                <FluentOverflow Style="width: 100%;">
-                    @foreach (var env in Component.Environments)
-                    {
-                        <FluentOverflowItem>
-                            <FluentBadge>@env</FluentBadge>
-                        </FluentOverflowItem>
-                    }
-                </FluentOverflow>
-            </FluentStack>
-            <FluentStack Style="margin-bottom: 10px" VerticalAlignment="VerticalAlignment.Center">
-                <FluentLabel Typo="Typography.H6">Links</FluentLabel>
-                @foreach (var link in Component.Links)
-                {
-                    <FluentAnchor Href="@link">@link</FluentAnchor>
-                }
-            </FluentStack>
+            <FluentLabel Typo="Typography.Header">Overview</FluentLabel>
+            <FluentDataGrid Style="margin-top: 10px" Id="overviewGrid" GenerateHeader=GenerateHeaderOption.None GridTemplateColumns=".4fr 1fr" TGridItem="string" role="grid">
+                <FluentDataGridRow>
+                    <FluentDataGridCell GridColumn=1>
+                        <FluentLabel Typo="Typography.H6">Owner</FluentLabel>
+                    </FluentDataGridCell>
+                    <FluentDataGridCell GridColumn=2>John Doe</FluentDataGridCell>
+                </FluentDataGridRow>
+                <FluentDataGridRow>
+                    <FluentDataGridCell GridColumn=1>
+                        <FluentLabel Typo="Typography.H6">Type</FluentLabel>
+                    </FluentDataGridCell>
+                    <FluentDataGridCell GridColumn=2>@Component.Type</FluentDataGridCell>
+                </FluentDataGridRow>
+                <FluentDataGridRow>
+                    <FluentDataGridCell GridColumn=1>
+                        <FluentLabel Typo="Typography.H6">Environments</FluentLabel>
+                    </FluentDataGridCell>
+                    <FluentDataGridCell GridColumn=2>
+                        <FluentOverflow Style="width: 100%;">
+                            @foreach (var env in Component.Environments)
+                            {
+                                <FluentOverflowItem>
+                                    <FluentBadge>@env</FluentBadge>
+                                </FluentOverflowItem>
+                            }
+                        </FluentOverflow>
+                    </FluentDataGridCell>
+                </FluentDataGridRow>
+                <FluentDataGridRow>
+                    <FluentDataGridCell GridColumn=1>
+                        <FluentLabel Typo="Typography.H6">Links</FluentLabel>
+                    </FluentDataGridCell>
+                    <FluentDataGridCell GridColumn=2>
+                        @foreach (var link in Component.Links)
+                        {
+                            <FluentAnchor Href="@link">@link</FluentAnchor>
+                        }
+                    </FluentDataGridCell>
+                </FluentDataGridRow>
+            </FluentDataGrid>
         </FluentCard>
         <FluentCard>
             <FluentLabel Style="margin-bottom: 10px" Typo="Typography.Header">Activity Log</FluentLabel>
-            <FluentDataGrid id="manualGrid" GenerateHeader=GenerateHeaderOption.None GridTemplateColumns=".4fr 1fr" TGridItem="string" role="grid">
+            <FluentDataGrid id="activityGrid" GenerateHeader=GenerateHeaderOption.None GridTemplateColumns=".4fr 1fr" TGridItem="string" role="grid">
                 <FluentDataGridRow RowType="DataGridRowType.Header">
                     <FluentDataGridCell GridColumn=1 CellType="DataGridCellType.ColumnHeader">Time</FluentDataGridCell>
                     <FluentDataGridCell GridColumn=2 CellType="DataGridCellType.ColumnHeader">Activity</FluentDataGridCell>
@@ -68,25 +87,52 @@ else
         </FluentCard>
         <FluentCard>
             <FluentLabel Style="margin-bottom: 10px" Typo="Typography.Header">Health Checks</FluentLabel>
-            <FluentDataGrid id="manualGrid" GenerateHeader=GenerateHeaderOption.None GridTemplateColumns=".4fr 1fr" TGridItem="string" role="grid">
+            <FluentDataGrid id="healthGrid" GenerateHeader=GenerateHeaderOption.None GridTemplateColumns=".4fr 1fr" TGridItem="string" role="grid">
                 <FluentDataGridRow RowType="DataGridRowType.Header">
                     <FluentDataGridCell GridColumn=1 CellType="DataGridCellType.ColumnHeader">Time</FluentDataGridCell>
                     <FluentDataGridCell GridColumn=2 CellType="DataGridCellType.ColumnHeader">Status</FluentDataGridCell>
                 </FluentDataGridRow>
                 <FluentDataGridRow>
                     <FluentDataGridCell GridColumn=1>3:50 PM</FluentDataGridCell>
-                    <FluentDataGridCell GridColumn=2><FluentBadge BackgroundColor="green" Color="white" Fill="green">healthy</FluentBadge></FluentDataGridCell>
+                    <FluentDataGridCell GridColumn=2>
+                        <FluentBadge BackgroundColor="green" Color="white" Fill="green">healthy</FluentBadge>
+                    </FluentDataGridCell>
                 </FluentDataGridRow>
                 <FluentDataGridRow>
                     <FluentDataGridCell GridColumn=1>2024-03-31</FluentDataGridCell>
-                    <FluentDataGridCell GridColumn=2><FluentBadge BackgroundColor="red" Color="white" Fill="red">unhealthy</FluentBadge></FluentDataGridCell>
+                    <FluentDataGridCell GridColumn=2>
+                        <FluentBadge BackgroundColor="red" Color="white" Fill="red">unhealthy</FluentBadge>
+                    </FluentDataGridCell>
                 </FluentDataGridRow>
             </FluentDataGrid>
         </FluentCard>
     </FluentStack>
 }
 
-<FluentLabel Style="margin-top: 20px" Typo="Typography.H3">Chart time?</FluentLabel>
+<FluentLabel Style="margin-top: 20px" Typo="Typography.H3">Panels</FluentLabel>
+<FluentAccordion>
+    <FluentAccordionItem Heading="Documentation">
+        <FluentIcon Value="@(new Icons.Regular.Size20.Notebook())" Color="@Color.Neutral" Slot="start"/>
+        This might have tabs with Readme/Install/PostInstall docs.
+    </FluentAccordionItem>
+    <FluentAccordionItem Heading="Test Plans">
+        <div slot="end">
+            <span style="color:green">Passing</span>
+        </div>
+        Maybe this shows a chart? Maybe a table of test plans.
+    </FluentAccordionItem>
+    <FluentAccordionItem Heading="Another Panel">
+        MORE CONTENT
+    </FluentAccordionItem>
+    <FluentAccordionItem Expanded="true">
+        <HeadingTemplate>
+            Panel <span style="color:red">Four</span>
+        </HeadingTemplate>
+        <ChildContent>
+            Panel four content
+        </ChildContent>
+    </FluentAccordionItem>
+</FluentAccordion>
 
 @code {
 
