--- a/src/Beacon.Web/wwwroot/app.css
+++ b/src/Beacon.Web/wwwroot/app.css
@@ -6,6 +6,7 @@ body {
     font-size: var(--type-ramp-base-font-size);
     line-height: var(--type-ramp-base-line-height);
     margin: 0;
+    background-color: var(--neutral-layer-2);
 }
 
 .navmenu-icon {
